--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "It will trigger auth0 deployment when a push is done on Github branch.",
   "main": "index.js",
   "scripts": {
-    "export:dev": " dotenv a0deploy export --strip --format yaml --output_folder . --config_file ./config/dev.json --secret $DEV_AUTH0_CLIENT_SECRET",
+    "sync": " dotenv a0deploy export --strip --format yaml --output_folder . --config_file ./config/dev.json --secret $DEV_AUTH0_CLIENT_SECRET",
+    "import:stag": "a0deploy import --input_file tenant.yaml --config_file ./config/stag.json",
     "import:prod": "a0deploy import --input_file tenant.yaml --config_file ./config/prod.json",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
