--- a/settings/tenant/tenant.yaml
+++ b/settings/tenant/tenant.yaml
@@ -4,12 +4,17 @@ rules:
     stage: login_success
     enabled: true
     order: 1
+  - name: Add email to access token
+    script: ./rules/Add email to access token.js
+    stage: login_success
+    enabled: true
+    order: 2
 rulesConfigs: []
 hooks: []
 pages: []
 resourceServers:
   - name: EventManagementAPI
-    identifier: '##API_IDENTIFIER##'
+    identifier: 'https://api.myevents.io'
     allow_offline_access: false
     enforce_policies: true
     scopes:
@@ -37,9 +42,11 @@ resourceServers:
 clients:
   - name: ' MyEventsUI FirstPartyApp'
     allowed_clients: []
-    allowed_logout_urls: @@APP_CALLBACKS@@
+    allowed_logout_urls:
+      - 'http://localhost:3000'
     app_type: spa
-    callbacks: @@APP_CALLBACKS@@
+    callbacks:
+      - 'http://localhost:3000'
     client_aliases: []
     cross_origin_auth: false
     custom_login_page_on: true
@@ -66,7 +73,27 @@ clients:
       expiration_type: expiring
     sso_disabled: false
     token_endpoint_auth_method: none
+    web_origins:
+      - 'http://localhost:3000'
   - name: API Explorer Application
+    app_type: non_interactive
+    cross_origin_auth: false
+    custom_login_page_on: true
+    grant_types:
+      - client_credentials
+    is_first_party: true
+    is_token_endpoint_ip_header_trusted: false
+    jwt_configuration:
+      alg: RS256
+      lifetime_in_seconds: 36000
+      secret_encoded: false
+    oidc_conformant: true
+    refresh_token:
+      rotation_type: non-rotating
+      expiration_type: non-expiring
+    sso_disabled: false
+    token_endpoint_auth_method: client_secret_post
+  - name: Auth0CLIDeploy
     app_type: non_interactive
     cross_origin_auth: false
     custom_login_page_on: true
@@ -124,9 +151,11 @@ clients:
     token_endpoint_auth_method: client_secret_post
   - name: ThirdPartyApp
     allowed_clients: []
-    allowed_logout_urls: @@APP_CALLBACKS@@
+    allowed_logout_urls:
+      - 'http://localhost:3000'
     app_type: spa
-    callbacks: @@APP_CALLBACKS@@
+    callbacks:
+      - 'http://localhost:3000'
     client_aliases: []
     cross_origin_auth: false
     custom_login_page_on: true
@@ -151,6 +180,26 @@ clients:
     sso_disabled: false
     token_endpoint_auth_method: none
   - name: auth0-deploy-cli-extension
+    cross_origin_auth: false
+    custom_login_page_on: true
+    grant_types:
+      - authorization_code
+      - implicit
+      - refresh_token
+      - client_credentials
+    is_first_party: true
+    is_token_endpoint_ip_header_trusted: false
+    jwt_configuration:
+      alg: RS256
+      lifetime_in_seconds: 36000
+      secret_encoded: false
+    oidc_conformant: true
+    refresh_token:
+      rotation_type: non-rotating
+      expiration_type: non-expiring
+    sso_disabled: false
+    token_endpoint_auth_method: client_secret_post
+  - name: auth0-github-deploy
     cross_origin_auth: false
     custom_login_page_on: true
     grant_types:
@@ -227,7 +276,7 @@ emailProvider: {}
 emailTemplates: []
 clientGrants:
   - client_id: API Explorer Application
-    audience: '##MANAGEMENT_API_AUDIENCE##'
+    audience: 'https://myevents-dev.eu.auth0.com/api/v2/'
     scope:
       - 'read:client_grants'
       - 'create:client_grants'
@@ -339,8 +388,118 @@ clientGrants:
       - 'read:role_members'
       - 'delete:role_members'
   - client_id: EventManagementAPI (Test Application)
-    audience: '##API_IDENTIFIER##'
+    audience: 'https://api.myevents.io'
     scope: []
+  - client_id: auth0-deploy-cli-extension
+    audience: 'https://myevents-dev.eu.auth0.com/api/v2/'
+    scope:
+      - 'read:client_grants'
+      - 'create:client_grants'
+      - 'delete:client_grants'
+      - 'update:client_grants'
+      - 'read:clients'
+      - 'update:clients'
+      - 'delete:clients'
+      - 'create:clients'
+      - 'read:client_keys'
+      - 'update:client_keys'
+      - 'delete:client_keys'
+      - 'create:client_keys'
+      - 'read:connections'
+      - 'update:connections'
+      - 'delete:connections'
+      - 'create:connections'
+      - 'read:resource_servers'
+      - 'update:resource_servers'
+      - 'delete:resource_servers'
+      - 'create:resource_servers'
+      - 'read:rules'
+      - 'update:rules'
+      - 'delete:rules'
+      - 'create:rules'
+      - 'read:rules_configs'
+      - 'update:rules_configs'
+      - 'delete:rules_configs'
+      - 'read:email_provider'
+      - 'update:email_provider'
+      - 'delete:email_provider'
+      - 'create:email_provider'
+      - 'read:tenant_settings'
+      - 'update:tenant_settings'
+      - 'read:grants'
+      - 'delete:grants'
+      - 'read:guardian_factors'
+      - 'update:guardian_factors'
+      - 'read:mfa_policies'
+      - 'update:mfa_policies'
+      - 'read:email_templates'
+      - 'create:email_templates'
+      - 'update:email_templates'
+      - 'read:roles'
+      - 'update:roles'
+      - 'delete:roles'
+      - 'create:roles'
+      - 'read:prompts'
+      - 'update:prompts'
+      - 'read:branding'
+      - 'update:branding'
+      - 'read:hooks'
+      - 'update:hooks'
+      - 'delete:hooks'
+      - 'create:hooks'
+  - client_id: auth0-github-deploy
+    audience: 'https://myevents-dev.eu.auth0.com/api/v2/'
+    scope:
+      - 'read:client_grants'
+      - 'create:client_grants'
+      - 'delete:client_grants'
+      - 'update:client_grants'
+      - 'read:clients'
+      - 'update:clients'
+      - 'delete:clients'
+      - 'create:clients'
+      - 'read:client_keys'
+      - 'update:client_keys'
+      - 'delete:client_keys'
+      - 'create:client_keys'
+      - 'read:connections'
+      - 'update:connections'
+      - 'delete:connections'
+      - 'create:connections'
+      - 'read:resource_servers'
+      - 'update:resource_servers'
+      - 'delete:resource_servers'
+      - 'create:resource_servers'
+      - 'read:rules'
+      - 'update:rules'
+      - 'delete:rules'
+      - 'create:rules'
+      - 'read:rules_configs'
+      - 'update:rules_configs'
+      - 'delete:rules_configs'
+      - 'read:email_provider'
+      - 'update:email_provider'
+      - 'delete:email_provider'
+      - 'create:email_provider'
+      - 'read:tenant_settings'
+      - 'update:tenant_settings'
+      - 'read:grants'
+      - 'delete:grants'
+      - 'read:guardian_factors'
+      - 'update:guardian_factors'
+      - 'read:mfa_policies'
+      - 'update:mfa_policies'
+      - 'read:email_templates'
+      - 'create:email_templates'
+      - 'update:email_templates'
+      - 'read:roles'
+      - 'update:roles'
+      - 'delete:roles'
+      - 'create:roles'
+      - 'read:hooks'
+      - 'update:hooks'
+      - 'delete:hooks'
+      - 'create:hooks'
 guardianFactors:
   - name: duo
     enabled: false
@@ -367,22 +526,22 @@ roles:
     description: Event Organizer
     permissions:
       - permission_name: 'event:create'
-        resource_server_identifier: '##API_IDENTIFIER##'
+        resource_server_identifier: 'https://api.myevents.io'
       - permission_name: 'event:delete'
-        resource_server_identifier: '##API_IDENTIFIER##'
+        resource_server_identifier: 'https://api.myevents.io'
       - permission_name: 'event:update'
-        resource_server_identifier: '##API_IDENTIFIER##'
+        resource_server_identifier: 'https://api.myevents.io'
       - permission_name: 'event:view'
-        resource_server_identifier: '##API_IDENTIFIER##'
+        resource_server_identifier: 'https://api.myevents.io'
   - name: Participant
     description: Event Participant
     permissions:
       - permission_name: 'account:deactivate'
-        resource_server_identifier: '##API_IDENTIFIER##'
+        resource_server_identifier: 'https://api.myevents.io'
       - permission_name: 'event:register'
-        resource_server_identifier: '##API_IDENTIFIER##'
+        resource_server_identifier: 'https://api.myevents.io'
       - permission_name: 'event:unregister'
-        resource_server_identifier: '##API_IDENTIFIER##'
+        resource_server_identifier: 'https://api.myevents.io'
 branding:
   colors:
     page_background: '#000000'
