--- a/settings/tenant/tenant.yaml
+++ b/settings/tenant/tenant.yaml
@@ -4,6 +4,11 @@ rules:
     stage: login_success
     enabled: true
     order: 1
+  - name: Add email to access token
+    script: ./rules/Add email to access token.js
+    stage: login_success
+    enabled: true
+    order: 2
 rulesConfigs: []
 hooks: []
 pages: []
@@ -71,6 +76,24 @@ clients:
     web_origins:
       - 'http://localhost:3000'
   - name: API Explorer Application
+    app_type: non_interactive
+    cross_origin_auth: false
+    custom_login_page_on: true
+    grant_types:
+      - client_credentials
+    is_first_party: true
+    is_token_endpoint_ip_header_trusted: false
+    jwt_configuration:
+      alg: RS256
+      lifetime_in_seconds: 36000
+      secret_encoded: false
+    oidc_conformant: true
+    refresh_token:
+      rotation_type: non-rotating
+      expiration_type: non-expiring
+    sso_disabled: false
+    token_endpoint_auth_method: client_secret_post
+  - name: Auth0CLIDeploy
     app_type: non_interactive
     cross_origin_auth: false
     custom_login_page_on: true
@@ -176,6 +199,26 @@ clients:
       expiration_type: non-expiring
     sso_disabled: false
     token_endpoint_auth_method: client_secret_post
+  - name: auth0-github-deploy
+    cross_origin_auth: false
+    custom_login_page_on: true
+    grant_types:
+      - authorization_code
+      - implicit
+      - refresh_token
+      - client_credentials
+    is_first_party: true
+    is_token_endpoint_ip_header_trusted: false
+    jwt_configuration:
+      alg: RS256
+      lifetime_in_seconds: 36000
+      secret_encoded: false
+    oidc_conformant: true
+    refresh_token:
+      rotation_type: non-rotating
+      expiration_type: non-expiring
+    sso_disabled: false
+    token_endpoint_auth_method: client_secret_post
 databases:
   - name: Username-Password-Authentication
     strategy: auth0
@@ -233,7 +276,7 @@ emailProvider: {}
 emailTemplates: []
 clientGrants:
   - client_id: API Explorer Application
-    audience: 'https://myevents.eu.auth0.com/api/v2/'
+    audience: 'https://myevents-dev.eu.auth0.com/api/v2/'
     scope:
       - 'read:client_grants'
       - 'create:client_grants'
@@ -347,6 +390,116 @@ clientGrants:
   - client_id: EventManagementAPI (Test Application)
     audience: 'https://api.myevents.io'
     scope: []
+  - client_id: auth0-deploy-cli-extension
+    audience: 'https://myevents-dev.eu.auth0.com/api/v2/'
+    scope:
+      - 'read:client_grants'
+      - 'create:client_grants'
+      - 'delete:client_grants'
+      - 'update:client_grants'
+      - 'read:clients'
+      - 'update:clients'
+      - 'delete:clients'
+      - 'create:clients'
+      - 'read:client_keys'
+      - 'update:client_keys'
+      - 'delete:client_keys'
+      - 'create:client_keys'
+      - 'read:connections'
+      - 'update:connections'
+      - 'delete:connections'
+      - 'create:connections'
+      - 'read:resource_servers'
+      - 'update:resource_servers'
+      - 'delete:resource_servers'
+      - 'create:resource_servers'
+      - 'read:rules'
+      - 'update:rules'
+      - 'delete:rules'
+      - 'create:rules'
+      - 'read:rules_configs'
+      - 'update:rules_configs'
+      - 'delete:rules_configs'
+      - 'read:email_provider'
+      - 'update:email_provider'
+      - 'delete:email_provider'
+      - 'create:email_provider'
+      - 'read:tenant_settings'
+      - 'update:tenant_settings'
+      - 'read:grants'
+      - 'delete:grants'
+      - 'read:guardian_factors'
+      - 'update:guardian_factors'
+      - 'read:mfa_policies'
+      - 'update:mfa_policies'
+      - 'read:email_templates'
+      - 'create:email_templates'
+      - 'update:email_templates'
+      - 'read:roles'
+      - 'update:roles'
+      - 'delete:roles'
+      - 'create:roles'
+      - 'read:prompts'
+      - 'update:prompts'
+      - 'read:branding'
+      - 'update:branding'
+      - 'read:hooks'
+      - 'update:hooks'
+      - 'delete:hooks'
+      - 'create:hooks'
+  - client_id: auth0-github-deploy
+    audience: 'https://myevents-dev.eu.auth0.com/api/v2/'
+    scope:
+      - 'read:client_grants'
+      - 'create:client_grants'
+      - 'delete:client_grants'
+      - 'update:client_grants'
+      - 'read:clients'
+      - 'update:clients'
+      - 'delete:clients'
+      - 'create:clients'
+      - 'read:client_keys'
+      - 'update:client_keys'
+      - 'delete:client_keys'
+      - 'create:client_keys'
+      - 'read:connections'
+      - 'update:connections'
+      - 'delete:connections'
+      - 'create:connections'
+      - 'read:resource_servers'
+      - 'update:resource_servers'
+      - 'delete:resource_servers'
+      - 'create:resource_servers'
+      - 'read:rules'
+      - 'update:rules'
+      - 'delete:rules'
+      - 'create:rules'
+      - 'read:rules_configs'
+      - 'update:rules_configs'
+      - 'delete:rules_configs'
+      - 'read:email_provider'
+      - 'update:email_provider'
+      - 'delete:email_provider'
+      - 'create:email_provider'
+      - 'read:tenant_settings'
+      - 'update:tenant_settings'
+      - 'read:grants'
+      - 'delete:grants'
+      - 'read:guardian_factors'
+      - 'update:guardian_factors'
+      - 'read:mfa_policies'
+      - 'update:mfa_policies'
+      - 'read:email_templates'
+      - 'create:email_templates'
+      - 'update:email_templates'
+      - 'read:roles'
+      - 'update:roles'
+      - 'delete:roles'
+      - 'create:roles'
+      - 'read:hooks'
+      - 'update:hooks'
+      - 'delete:hooks'
+      - 'create:hooks'
 guardianFactors:
   - name: duo
     enabled: false
