--- a/settings/tenant/tenant.yaml
+++ b/settings/tenant/tenant.yaml
@@ -42,9 +42,9 @@ resourceServers:
 clients:
   - name: ' MyEventsUI FirstPartyApp'
     allowed_clients: []
-    allowed_logout_urls: '@@APP_CALLBACKS@@'
+    allowed_logout_urls: @@APP_CALLBACKS@@
     app_type: spa
-    callbacks: '@@APP_CALLBACKS@@'
+    callbacks: @@APP_CALLBACKS@@
     client_aliases: []
     cross_origin_auth: false
     custom_login_page_on: true
@@ -149,9 +149,9 @@ clients:
     token_endpoint_auth_method: client_secret_post
   - name: ThirdPartyApp
     allowed_clients: []
-    allowed_logout_urls: '@@APP_CALLBACKS@@'
+    allowed_logout_urls: @@APP_CALLBACKS@@
     app_type: spa
-    callbacks: '@@APP_CALLBACKS@@'
+    callbacks: @@APP_CALLBACKS@@
     client_aliases: []
     cross_origin_auth: false
     custom_login_page_on: true
